--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <!--хедер сайта с навигацией-->
     <header class="page-header">
       <a class="navigation-logo" href="index.html">
-        <img class="page-header-logo" src="" alt="Логотип города Седона">
+        <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70" alt="Логотип города Седона">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -140,7 +140,7 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы Amara Resort & Spa">
+              <img class="hotel-card-image" src="images/catalog/hotel_amara.jpg" width="300" height="212" alt="Фотография вида из гостиницы Amara Resort & Spa">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
             <span class="hotel-card-type">Гостиница</span>
@@ -152,7 +152,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы Villas at Poco Diablo">
+              <img class="hotel-card-image" src="images/catalog/hotel_villas.jpg" width="300" height="212" alt="Фотография вида из гостиницы Villas at Poco Diablo">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
             <span class="hotel-card-type">Гостиница</span>
@@ -164,7 +164,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы Desert Quail Inn">
+              <img class="hotel-card-image" src="images/catalog/hotel_desert_quail.jpg" width="300" height="212" alt="Фотография вида из гостиницы Desert Quail Inn">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
             <span class="hotel-card-type">Гостиница</span>
@@ -176,7 +176,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="Фотография вида из гостиницы GreenTree Inn">
+              <img class="hotel-card-image" src="images/catalog/hotel_green_tree.jpg" width="300" height="212" alt="Фотография вида из гостиницы GreenTree Inn">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
             <span class="hotel-card-type">Гостиница</span>
@@ -246,7 +246,7 @@
           +7 (812) 812-12-12
         </a>
         <a class="footer-htmlacademy-link" href="https://htmlacademy.ru/">
-          <img class="htmlacademy-logo" src="" alt="Лого HTML Academy">
+          <img class="htmlacademy-logo" src="images/logo-htmlacademy-footer.svg" width="115" height="33" alt="Лого HTML Academy">
         </a>
       </section>
     </footer>
