--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -36,7 +37,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда!</a>
+            <a class="button navigation-link navigation-link-white" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -46,52 +47,49 @@
     <main class="main-index">
       <h1 class="visually-hidden">Город Седона</h1>
       <div class="main-hero">
-        <img class="logo" src="images/logo-hero.svg" width="458" height="352" alt="Логотип города Седона">
+        <img class="logo" src="images/logo-hero.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
       </div>
 
       <section class="description">
         <h2 class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="description-advantages">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <p class="description-features">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
-      <section class="advantages">
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-image" src="images/photo-sedona-city.jpg" width="800" height="384" alt="Фотография города Седона">
+      <section class="features">
+        <ul class="features-list">
+          <li class="features-item features-item-blue">
+            <h3 class="features-title features-title-white">Настоящий городок</h3>
+            <p class="features-description features-description-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="features-image" src="images/photo-sedona-city.jpg" width="800" height="384" alt="Фотография города Седона">
           </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          <li class="features-item">
+            <h3 class="features-title">Небольшая площадь</h3>
+            <p class="features-description">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <li class="features-item features-item-grey">
+            <h3 class="features-title">Красивая дорога</h3>
+            <p class="features-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          <li class="features-item">
+            <h3 class="features-title">Мало туристов</h3>
+            <p class="features-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="advantages-item">
-            <img class="advantages-img" src="images/photo-devils-bridge.jpg" width="800" height="384" alt="Фотография моста дьявола">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <li class="features-item features-item-blue">
+            <img class="features-img" src="images/photo-devils-bridge.jpg" width="800" height="384" alt="Фотография моста дьявола">
+            <h3 class="features-title features-title-white">Там есть мост дьявола</h3>
+            <p class="features-description features-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
-        </ul>
-
-        <ul class="reccomendations-list">
-          <li class="reccomendations-item reccomendations-item-icon-housing">
-            <h3 class="reccomendations-title">Жильё</h3>
-            <p class="reccomendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          <li class="features-item features-item-icon-housing">
+            <h3 class="features-title">Жильё</h3>
+            <p class="features-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
-          <li class="reccomendations-item reccomendations-item-icon-food">
-            <h3 class="reccomendations-title">Еда</h3>
-            <p class="reccomendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <li class="features-item features-item-icon-food">
+            <h3 class="features-title">Еда</h3>
+            <p class="features-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="reccomendations-item reccomendations-item-icon-souvenir">
-            <h3 class="reccomendations-title">Сувениры</h3>
-            <p class="reccomendations-description">Не только китайского, но и настоящего местного производства!</p>
+          <li class="features-item features-item-icon-souvenir">
+            <h3 class="features-title">Сувениры</h3>
+            <p class="features-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
@@ -100,13 +98,13 @@
       <section class="hotel-search">
         <h2 class="hotel-search-title">Заинтересовались?</h2>
         <p class="hotel-search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="hotel-search-button" href="#">Поиск гостиницы в Седоне</a>
+        <a class="button hotel-search-button" href="#">Поиск гостиницы в Седоне</a>
       </section>
     </main>
 
     <!--футер сайта с подпиской и соцсетями-->
     <footer class="page-footer">
-      <section class="newsletter">
+      <section class="newsletter-index">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
