--- a/catalog.html
+++ b/catalog.html
@@ -29,12 +29,12 @@
 
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link navigation-search" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link navigation-favorite" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -59,7 +59,7 @@
               </li>
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link">
-                  <span class="visually-hidden">Гостиницы</span>
+                  <span class="breadcrumbs-text">Гостиницы</span>
                 </a>
               </li>
             </ul>
@@ -130,24 +130,26 @@
             <p class="hotel-count">Найдено гостиниц:
               <span class="hotel-count-number">38</span>
             </p>
-            <select class="select-control" aria-label="Сортировка">
-              <option value="cheap">Сначала дешевые</option>
-              <option value="expensive">Сначала дорогие</option>
-              <option value="popular">Сначала популярные</option>
-            </select>
+            <div class="sorting-type">
+              <select class="select-control" aria-label="Сортировка">
+                <option value="cheap">Сначала дешевые</option>
+                <option value="expensive">Сначала дорогие</option>
+                <option value="popular">Сначала популярные</option>
+              </select>
+            </div>
             <ul class="hotel-card-display">
               <li class="hotel-card-display-item">
-                <a class="button button-selected" href="#">
+                <a class="button button-selected view-tile" href="#">
                   <span class="visually-hidden">Показать карточки</span>
                 </a>
               </li>
               <li class="hotel-card-display-item">
-                <a class="button" href="#">
+                <a class="button view-slideshow" href="#">
                   <span class="visually-hidden">Показать слайды</span>
                 </a>
               </li>
               <li class="hotel-card-display-item">
-                <a class="button" href="#">
+                <a class="button view-list" href="#">
                   <span class="visually-hidden">Показать список</span>
                 </a>
               </li>
@@ -165,7 +167,7 @@
               <span class="hotel-card-price">От 4000 ₽</span>
               <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite" type="button">в избранное</button>
-              <span class="hotel-card-stars visually-hidden">4 звезды</span>
+              <span class="hotel-card-stars hotel-card-stars-4"></span>
               <span class="hotel-card-button button rating">Рейтинг: 8,5</span>
             </li>
             <li class="hotel-card">
@@ -178,7 +180,7 @@
               <span class="hotel-card-price">От 5000 ₽</span>
               <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite favorite-added" type="button">в избранном</button>
-              <span class="hotel-card-stars visually-hidden">4 звезды</span>
+              <span class="hotel-card-stars hotel-card-stars-4"></span>
               <span class="hotel-card-button button rating">Рейтинг: 9,2</span>
             </li>
             <li class="hotel-card">
@@ -191,7 +193,7 @@
               <span class="hotel-card-price">От 2500 ₽</span>
               <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite" type="button">в избранное</button>
-              <span class="hotel-card-stars visually-hidden">3 звезды</span>
+              <span class="hotel-card-stars hotel-card-stars-3"></span>
               <span class="hotel-card-button button rating">Рейтинг: 6,9</span>
             </li>
             <li class="hotel-card">
@@ -204,7 +206,7 @@
               <span class="hotel-card-price">От 1500 ₽</span>
               <a class="hotel-card-button button button-about" href="#">подробнее</a>
               <button class="hotel-card-button button favorite" type="button">в избранное</button>
-              <span class="hotel-card-stars visually-hidden">2 звезды</span>
+              <span class="hotel-card-stars hotel-card-stars-2"></span>
               <span class="hotel-card-button button rating">Рейтинг: 5,0</span>
             </li>
 
@@ -254,16 +256,31 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a class="button" href="https://vk.com/htmlacademy">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
+                    fill="#83B3D3" /></svg>
                 <span class="visually-hidden">ВКонтакте</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href="https://t.me/htmlacademy ">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="18" height="16" viewBox="0 0 19 16"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m17.3.1-16 6.1c-1 .5-1 1-.2 1.4l4.1 1.2 9.5-6c.5-.2.9 0 .5.2l-7.6 7-.3 4.2c.4 0 .6-.2.8-.4l2-2 4.1 3c.8.5 1.3.3 1.5-.6l2.7-12.8C18.7.3 18-.2 17.3 0Z"
+                    fill="#83B3D3" /></svg>
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="18" viewBox="0 0 23 18"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M19.1.5H3.7C1.8.5.5 2.1.5 3.9v10c0 2 1.3 3.6 3.2 3.6h15.6c1.7 0 3.2-1.6 3.2-3.4V3.9C22.3 2.1 21 .5 19.1.5ZM8.1 13V5l7.4 4-7.3 4Z"
+                    fill="#83B3D3" /></svg>
                 <span class="visually-hidden">Ютуб</span>
               </a>
             </li>
