--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
           <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
             alt="Логотип города Седона">
         </a>
-        <ul class="navigation-list">
+        <ul class="navigation-list navigation-menu">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
           </li>
@@ -35,6 +35,9 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link navigation-favorite" href="#">
+              <div class="navigation-favorite-circle">
+                <span class="navigation-favorite-count">12</span>
+              </div>
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
