--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img class="page-header-logo" src="images/logo-header.svg" width="140" height="70"
             alt="Логотип города Седона">
         </a>
-        <ul class="navigation-list">
+        <ul class="navigation-list navigation-menu">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
           </li>
@@ -35,6 +35,9 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link navigation-favorite" href="#">
+              <div class="navigation-favorite-circle">
+                <span class="navigation-favorite-count">12</span>
+              </div>
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -66,7 +69,7 @@
           <ul class="features-list">
             <li class="features-item features-item-blue">
               <div class="features-wrapper">
-                <h3 class="features-title features-title-white">Настоящий городок</h3>
+                <h3 class="features-title features-title-white features-title-line">Настоящий городок</h3>
                 <p class="features-description features-description-white">Седона — не аттракцион для туристов, там
                   течёт своя жизнь</p>
               </div>
@@ -75,19 +78,19 @@
             </li>
             <li class="features-item features-item-lt-grey">
               <div class="features-wrapper">
-                <h3 class="features-title">Небольшая площадь</h3>
+                <h3 class="features-title features-title-line">Небольшая площадь</h3>
                 <p class="features-description">Все достопримечательности находятся очень близко</p>
               </div>
             </li>
             <li class="features-item features-item-grey">
               <div class="features-wrapper">
-                <h3 class="features-title">Красивая дорога</h3>
+                <h3 class="features-title features-title-line">Красивая дорога</h3>
                 <p class="features-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="features-item features-item-lt-grey">
               <div class="features-wrapper">
-                <h3 class="features-title">Мало туристов</h3>
+                <h3 class="features-title features-title-line">Мало туристов</h3>
                 <p class="features-description">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
@@ -95,7 +98,7 @@
               <img class="features-image" src="images/photo-devils-bridge.jpg" width="800" height="384"
                 alt="Фотография моста дьявола">
               <div class="features-wrapper">
-                <h3 class="features-title features-title-white">Там есть мост дьявола</h3>
+                <h3 class="features-title features-title-white features-title-line">Там есть мост дьявола</h3>
                 <p class="features-description features-description-white">Да, по нему можно пройти! Если вы осмелитесь,
                   разумеется</p>
               </div>
@@ -150,30 +153,31 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a class="button" href="https://vk.com/htmlacademy">
-                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="14" viewBox="0 0 25 14"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M24 1c.1-.6 0-1-.8-1h-2.7c-.6 0-1 .3-1.1.7C19.4.7 18 4 16.2 6c-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.7c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9C4.9.3 4.7 0 4 0H1.4C.6 0 .5.3.5.7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7C19.6 13.2 20 14 21 14h2.6c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20.4 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"
-                    fill="#83B3D3" /></svg>
+                    fill="currentColor" /></svg>
                 <span class="visually-hidden">ВКонтакте</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href="https://t.me/htmlacademy ">
-                <svg class="footer-icon" aria-hidden="true" focusable="false" width="18" height="16" viewBox="0 0 19 16" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="18" height="16" viewBox="0 0 19 16"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="m17.3.1-16 6.1c-1 .5-1 1-.2 1.4l4.1 1.2 9.5-6c.5-.2.9 0 .5.2l-7.6 7-.3 4.2c.4 0 .6-.2.8-.4l2-2 4.1 3c.8.5 1.3.3 1.5-.6l2.7-12.8C18.7.3 18-.2 17.3 0Z"
-                    fill="#83B3D3" /></svg>
+                    fill="currentColor" /></svg>
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="18" viewBox="0 0 23 18"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M19.1.5H3.7C1.8.5.5 2.1.5 3.9v10c0 2 1.3 3.6 3.2 3.6h15.6c1.7 0 3.2-1.6 3.2-3.4V3.9C22.3 2.1 21 .5 19.1.5ZM8.1 13V5l7.4 4-7.3 4Z"
-                    fill="#83B3D3" /></svg>
+                    fill="currentColor" /></svg>
                 <span class="visually-hidden">Ютуб</span>
               </a>
             </li>
@@ -182,8 +186,10 @@
             <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </div>
           <a class="footer-htmlacademy-link" href="https://htmlacademy.ru/">
-            <img class="htmlacademy-logo" src="images/logo-htmlacademy-footer.svg" width="115" height="33"
-              alt="Лого HTML Academy">
+            <svg class="footer-htmlacademy-logo" aria-hidden="true" focusable="false" width="115" height="34" viewBox="0 0 115 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M0 13.7v2.6h2.5v-2.6H0ZM11.6 5.3C10 5.3 8.8 6 8 7h-.1V.8h-2v15.5h2V11c0-2 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6c.1-3-1.8-5-4.5-5ZM26.6 5.6h-4.8V2h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1V7.5h4.8v-2ZM41.1 5.4c-1.6 0-2.9.8-3.5 2.1h-.1a3.7 3.7 0 0 0-3.4-2c-1.4 0-2.5.7-3.1 1.7h-.1V5.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.7c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.5c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1V.7h-2v12.7ZM28.9 20.5a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6S21.9 30 25 30c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19h-2v1.5ZM25.3 28a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6-1.4 3.6-3.6 3.6ZM44.2 22.8c-.5-2.4-2.6-4-5.4-4a5.4 5.4 0 0 0-5.6 5.5c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.5a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19h-2v1.5ZM51.5 28a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6-1.5 3.6-3.6 3.6ZM68.7 20.6a5 5 0 0 0-3.9-1.9c-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V14.2h-2v6.4ZM65.1 28a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.7a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 2c1.7 0 3 1 3.3 2.5h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 18.7a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8V19h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V24c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.8l-3.6-8.9h-2.2l4.8 11.6c-.3 1-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 9Z"
+                fill="currentColor" /></svg>
           </a>
         </section>
       </div>
