--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link navigation-link-scale navigation-favorite" href="#">
-              <span class="navigation-favorite-circle">
-                <span class="navigation-favorite-count">12</span>
-              </span>
+              <span class="navigation-favorite-count">12</span>
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -186,7 +184,8 @@
             <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </div>
           <a class="footer-htmlacademy-link" href="https://htmlacademy.ru/">
-            <svg class="footer-htmlacademy-logo" aria-hidden="true" focusable="false" width="115" height="34" viewBox="0 0 115 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="footer-htmlacademy-logo" aria-hidden="true" focusable="false" width="115" height="34"
+              viewBox="0 0 115 34" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M0 13.7v2.6h2.5v-2.6H0ZM11.6 5.3C10 5.3 8.8 6 8 7h-.1V.8h-2v15.5h2V11c0-2 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6c.1-3-1.8-5-4.5-5ZM26.6 5.6h-4.8V2h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1V7.5h4.8v-2ZM41.1 5.4c-1.6 0-2.9.8-3.5 2.1h-.1a3.7 3.7 0 0 0-3.4-2c-1.4 0-2.5.7-3.1 1.7h-.1V5.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.7c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.5c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1V.7h-2v12.7ZM28.9 20.5a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6S21.9 30 25 30c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19h-2v1.5ZM25.3 28a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6-1.4 3.6-3.6 3.6ZM44.2 22.8c-.5-2.4-2.6-4-5.4-4a5.4 5.4 0 0 0-5.6 5.5c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.5a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19h-2v1.5ZM51.5 28a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6-1.5 3.6-3.6 3.6ZM68.7 20.6a5 5 0 0 0-3.9-1.9c-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V14.2h-2v6.4ZM65.1 28a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.7a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 2c1.7 0 3 1 3.3 2.5h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 18.7a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8V19h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V24c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.8l-3.6-8.9h-2.2l4.8 11.6c-.3 1-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 9Z"
                 fill="currentColor" /></svg>
@@ -194,6 +193,74 @@
         </section>
       </div>
     </footer>
+
+    <!-- модальное окно -->
+    <div class="modal-container">
+      <div class="modal modal-search">
+        <button class="modal-close-button" type="button">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+        <section class="modal-content">
+          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+          <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+            <p class="field-group">
+              <label class="modal-form arrival-form" for="modal-arrival">Дата заезда:</label>
+              <input class="field arrival-form-field " type="text" id="modal-arrival" name="modal-arrival"
+                placeholder="Укажите дату" value="27 апреля 2020">
+              <span class="modal-text modal-text-error">Мы не можем отправить вас в прошлое.</span>
+            </p>
+            <p class="field-group">
+              <label class="modal-form departure-form" for="modal-departure">Дата выезда:</label>
+              <input class="field departure-form-field" type="text" id="modal-departure" name="modal-departure"
+                placeholder="Укажите дату" value="1 сентября 2021">
+              <span class="modal-text">На эти даты есть свободные номера. Пока есть.</span>
+            </p>
+
+            <div class="field-group-count">
+              <label class="modal-form adult-form" for="modal-adults">Взрослые:</label>
+              <span class="field-box">
+                <button class="field-button" type="button">
+                  <svg class="button-minus" aria-hidden="true" focusable="false" width="14" height="2"
+                    viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0v2h14V0H0Z" fill="currentColor" fill-opacity="1" /></svg>
+                </button>
+                <input class="field-number" type="number" id="modal-adults" name="modal-adults" value="2">
+                <button class="field-button button-plus" type="button">
+                  <svg class="button-plus" aria-hidden="true" focusable="false" width="14" height="14"
+                    viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="currentColor" fill-opacity="1" /></svg>
+                </button>
+              </span>
+
+              <span class="modal-form child-form">
+                <label class="modal-form child-form form-text" for="modal-adults">Дети:</label>
+                <span class="tooltip">
+                  <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date"></button>
+                  <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18
+                    лет. Дети до 6 лет размещаются бесплатно.</span>
+                </span>
+              </span>
+
+              <span class="field-box">
+                <button class="field-button button-minus" type="button">
+                  <svg class="button-minus" aria-hidden="true" focusable="false" width="14" height="2"
+                    viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0v2h14V0H0Z" fill="currentColor" fill-opacity="1" /></svg>
+                </button>
+                <input class="field-number" type="number" id="modal-child" name="modal-child" value="2">
+                <button class="field-button button-plus" type="button">
+                  <svg class="button-plus" aria-hidden="true" focusable="false" width="14" height="14"
+                    viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" fill="currentColor" fill-opacity="1" /></svg>
+                </button>
+              </span>
+            </div>
+            <button class="button button-search" type="button">Найти</button>
+          </form>
+        </section>
+      </div>
+    </div>
+
   </body>
 
 </html>
